Fix positioning of info bar on smaller screens

--- a/src/App.css
+++ b/src/App.css
@@ -108,6 +108,7 @@ h2 {
         display: flex;
         align-items: center;
         box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+        margin-top: 3.5rem;
 }   
 
     .scroll-text {
